--- a/ai/Megatron/English/Python/jupyter_notebook/Lab1-2_EstimateComputeDaysNeeded.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab1-2_EstimateComputeDaysNeeded.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "special-singer",
+   "id": "anticipated-allocation",
    "metadata": {},
    "source": [
     "# Estimate Time\n",
@@ -11,7 +11,11 @@
     "## Learning Objectives\n",
     "The goal of this lab is to estimate compute time needed for an end to end training run.\n",
     "\n",
-    "**Motivation**: In order to request for computing resources for a training job on a cluster, one must provide information such as, the number of nodes/gpus and the estimated time of the training job run.\n",
+    "**Motivation**: In order to request for computing resources for a training job runs on a super computing cluster, one must provide information such as, the number of nodes/gpus requested as well as the estimated time for the training job run.\n",
+    "\n",
+    "Note: now that we obtained the toy text data via webscarpping from the previous lab, the next step is to request for compute resources. In order to train a very large langauge model, large compute resources must be requested and approved in advance. For the cluster admin to allocate resources to the training job, the applicant must provide minimal information such as the number of gpus necessary for the training job to run as well as estimate how long, i.e the time it takes, to compute one end to end training run.\n",
+    "\n",
+    "This is what we are trying to achieve in this notebook, estimate training time per given parameters below.\n",
     "\n",
     "Training time (in seconds) is approximated with this equation : 8*T*P/n*X\n",
     "\n",
@@ -34,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complicated-reproduction",
+   "id": "czech-cover",
    "metadata": {},
    "source": [
     "---\n",
@@ -77,11 +81,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hundred-array",
+   "id": "attractive-medium",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The following code block contain automatic functions which assist calculating time-to-compute for an end to end training run.\n",
+    "# The following code block contain automatic function which assists the calculation of time-to-compute for an end to end training run.\n",
     "import numpy as np\n",
     "# T = dataset size measured in numbers of tokens in the dataset\n",
     "# P = model parameters for GPT3 varients\n",
@@ -117,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "noted-sense",
+   "id": "indirect-insulin",
    "metadata": {},
    "source": [
     "Below is an example of expected outputs :\n",
@@ -131,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indie-schema",
+   "id": "little-answer",
    "metadata": {},
    "source": [
     "---\n",
@@ -149,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cosmetic-gregory",
+   "id": "manufactured-shape",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "viral-upper",
+   "id": "cubic-water",
    "metadata": {},
    "source": [
     "--- \n",
@@ -174,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spiritual-dancing",
+   "id": "beneficial-designer",
    "metadata": {},
    "source": [
     "-----\n",
@@ -183,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "silent-kruger",
+   "id": "raising-temperature",
    "metadata": {},
    "source": [
     "-----\n",
