Adding Lab2-1, Lab2-2 wip other notebooks

--- a/ai/Megatron/English/Python/jupyter_notebook/Lab1-3_MegatronFundementals.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab1-3_MegatronFundementals.ipynb
@@ -2,29 +2,37 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "wooden-perth",
+   "id": "geographic-sweden",
    "metadata": {},
    "source": [
     "##  Megatron-LM Model Parallel Unit (MPU)\n",
     "---\n",
     "\n",
-    "NVIDIA's Megatron-LM makes training very large langauge models ( up to one trillion parameters ) a reality. Megatron-LM's core, Model Paralleism Unit ( MPU ), is the backbones for [DeepSpeed](https://www.deepspeed.ai/features/#model-parallelism) and Facebook [FairScale](https://github.com/facebookresearch/fairscale), both of them integrate Megatron-LM's MPU heavily in the backend.\n",
+    "NVIDIA's Megatron-LM makes training very large langauge models ( up to one trillion parameters ) a reality. Megatron-LM's core, Model Parallel Unit ( MPU ), is the backbones for [DeepSpeed](https://www.deepspeed.ai/features/#model-parallelism) and Facebook [FairScale](https://github.com/facebookresearch/fairscale), both of them integrate Megatron-LM's MPU in the backend.\n",
+    "\n",
+    "Bofore moving on to do model training, it is crucial to understand how Megatron-LM's core engine works, especially Tensor Model Parallism.\n",
+    "\n",
+    "Tensor Model Parallism is part of the Model Parallel Unit ( MPU ). When training Megatron-LM with multi-GPUs workload, for a smaller model, such as 1 Billion GPT3 model, applying Tensor Model Parallism is enough. However, scaling model size as well as the compute to multi-nodes training job is not a trivial task, Pipeline Model Parallism will then need to be in place as well as Tensor Model Parallism in order to achieve the near-linear scaling performance during model training runtime.\n",
+    "\n",
+    "In this notebook, we will focus solely on Tensor Model Parallism, complimented with how Megatron-LM groups GPUs according to the training configuration. \n",
+    "\n",
+    "Note: It is **NOT** required to have 16 GPUs (i.e. 2 nodes, each with 8 x A100 GPUs), this will be done **virtually** in the notebook via modified code to print out the grouping of the GPUs affinity per training configuration instead.\n",
     "\n",
     "## Learning Objectives\n",
     "\n",
     "The goal of this lab is to understand how Megatro-LM's Model Parallel Unit (MPU) works, more specifically, we will cover :\n",
     "\n",
     "    - GPUs grouping affinity per training configuration.\n",
-    "    - Tensor Parallism : \n",
+    "    - Tensor Model Parallism : \n",
     "        - Column Parallel\n",
     "        - Row Parallel\n",
     "\n",
-    "Pipeline parallism will be covered in the lecture instead. \n"
+    "Pipeline Model Parallism will be covered in the lecture instead. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "legislative-dividend",
+   "id": "religious-metadata",
    "metadata": {},
    "source": [
     "Before going through GPUs grouping affinity, we need to specify the following parameters :\n",
@@ -58,7 +66,7 @@
     "    4 pipeline model-parallel groups:\n",
     "        [g0, g4, g8, g12], [g1, g5, g9, g13], [g2, g6, g10, g14], [g3, g7, g11, g15]\n",
     "\n",
-    "**Note** that for efficiency, the caller should make sure adjacent ranks are on the same DGX box.\n",
+    "**Note** : for efficiency, the caller should make sure adjacent ranks are on the same DGX box.\n",
     "For example if we are using 2 DGX-1 boxes\n",
     "with a total of 16 GPUs, rank 0 to 7 belong to the first box and\n",
     "ranks 8 to 15 belong to the second box."
@@ -66,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faced-detroit",
+   "id": "sonic-processor",
    "metadata": {},
    "source": [
     "The code block below is modified from Megatron-LM [initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/initialize.py) in order to avoid the need of having actual 16 physical GPUs to run this notebook, in another word, this notebook can be run without have any physical GPUs present."
@@ -75,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cooperative-contractor",
+   "id": "rapid-watch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,12 +163,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floppy-princeton",
+   "id": "monthly-vacation",
    "metadata": {},
    "source": [
     "\n",
     "Sanity check, verify, after run the below code cell, the result will match the comment inside of [megatron/mpu/initializer.py](https://github.com/NVIDIA/Megatron-LM/blob/main/megatron/mpu/initialize.py#L63).\n",
-    "Since we have a total of 16 GPUs denoted by g0 ... g15, we expected to see the below result :\n",
+    "Since we have a total of 16 GPUs **virtually** denoted by g0 ... g15, we expected to see the below result :\n",
     "\n",
     "            8 data_parallel groups:\n",
     "                [g0, g2], [g1, g3], [g4, g6], [g5, g7], [g8, g10], [g9, g11], [g12, g14], [g13, g15]\n",
@@ -173,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "postal-hotel",
+   "id": "enhanced-latitude",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electric-differential",
+   "id": "nasty-zambia",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -214,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prime-puppy",
+   "id": "weird-knife",
    "metadata": {},
    "source": [
     "Try a different training configuration, what did you get ? "
@@ -223,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "external-freedom",
+   "id": "verified-brand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,11 +245,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "every-cotton",
+   "id": "blond-radical",
    "metadata": {},
    "source": [
     "----------------------------------------------------------------------\n",
-    "Column Parallel is part of Megatron-LM's Tensor Parallelism.  \n",
+    "Megatron-LM's Column Parallel is part of Megatron-LM's Tensor Model Parallelism.  \n",
     "[ColumnParallel reference](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/layers.py#L201)\n",
     "![ColumnParallel](./Megatron-LM/pics/ColumnParallel.JPG)"
    ]
@@ -249,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "turkish-capability",
+   "id": "developing-installation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "experimental-ocean",
+   "id": "twelve-rebel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wired-graham",
+   "id": "extensive-transfer",
    "metadata": {},
    "source": [
     "Peek inside Column Parallel Class, indeed Column Parallel can partition input matrix A into [A0, A1, A2 ...An] each of the partition matrix Ai, where i= 0, 1, 2 ...n, is sliced **column-wised**. Each column-wised partitioned matrix Ai will then be sent to the corresponding gpu based on the groupped gpu affinity."
@@ -438,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "circular-hearing",
+   "id": "agreed-spending",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "instrumental-nickel",
+   "id": "greek-portable",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -472,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "saved-quantity",
+   "id": "healthy-loading",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "complete-camel",
+   "id": "considered-class",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "divided-mexican",
+   "id": "imported-adoption",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -503,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corporate-recipient",
+   "id": "intellectual-wright",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sound-haven",
+   "id": "pursuant-dinner",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -522,11 +530,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coupled-stevens",
+   "id": "affiliated-aircraft",
    "metadata": {},
    "source": [
     "----------------------------------------------------------------------\n",
-    "## Megatron-LM's Row Parallel \n",
+    "Megatron-LM's Row Parallel is part of Megatron-LM's Tensor Model Parallelism.  \n",
     "[RowParallel reference](https://github.com/NVIDIA/Megatron-LM/blob/90e0a0dd08159e1c95f4f9d99bb8687f327d36c3/megatron/mpu/layers.py#L294)\n",
     "![RowParallel](./Megatron-LM/pics/RowParallel.JPG)"
    ]
@@ -534,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prerequisite-simulation",
+   "id": "medium-balloon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "satisfactory-irish",
+   "id": "personal-motion",
    "metadata": {},
    "source": [
     "Peek inside Row Parallel Class, indeed Row Parallel can partition input matrix A into [A0, A1, A2 ...An] each of the partition matrix Ai, where i= 0, 1, 2 ...n, Ai was chopped in a **row-wised** manner. Each row-wised partitioned matrix Ai will then be sent to the corresponding gpu based on the groupped gpu affinity."
@@ -652,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "green-compiler",
+   "id": "intellectual-income",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "growing-standing",
+   "id": "agreed-eight",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -702,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "handmade-judge",
+   "id": "published-range",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "found-investing",
+   "id": "native-thomas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prime-combine",
+   "id": "aerial-three",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -732,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "disciplinary-western",
+   "id": "tracked-viking",
    "metadata": {},
    "source": [
     "---\n",
@@ -743,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blessed-crystal",
+   "id": "needed-scanning",
    "metadata": {},
    "source": [
     "-----\n",
@@ -752,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lucky-average",
+   "id": "tender-christianity",
    "metadata": {},
    "source": [
     "-----\n",
