--- a/ai/Megatron/English/Python/jupyter_notebook/Lab1-4_GPT_vocab_merge_files.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Lab1-4_GPT_vocab_merge_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "noticed-neighborhood",
+   "id": "mysterious-bride",
    "metadata": {},
    "source": [
     "## GPT Tokenizer files\n",
@@ -12,14 +12,14 @@
     "\n",
     "The goal of this lab is to examine the difference between BPE and GPTBPE Tokenizer.\n",
     "\n",
-    "Later on, we will use the observations from this notebook to train a GPT Tokenizer with our own raw text data.\n",
+    "Later on, we will use the observations from this notebook to train a GPTBPE Tokenizer with our own raw text data.\n",
     "\n",
     "We will load and verify GPTBPE Tokenizer and make sure the output tokens and token ids are as expected. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "comic-architecture",
+   "id": "thrown-pittsburgh",
    "metadata": {},
    "source": [
     "Let's review the source code of [gpt2 tokenizer](https://huggingface.co/transformers/_modules/transformers/tokenization_gpt2.html)\n",
@@ -33,12 +33,14 @@
     "         tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
     "        \n",
     "         tokenizer(\" Hello world\")['input_ids']\n",
-    "        [18435, 995]\n"
+    "        [18435, 995]\n",
+    "\n",
+    "We expect our custom tokenizer, which we will train and obtain custom vocab.json and merges.txt files, when applies tokenization, should result in the same outputs above given the exact same input. \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "portuguese-protocol",
+   "id": "marine-alberta",
    "metadata": {},
    "source": [
     "Install necessary python libraries."
@@ -47,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "latter-owner",
+   "id": "entitled-brass",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,16 +59,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trained-glenn",
+   "id": "generous-blake",
    "metadata": {},
    "source": [
-    "Next, we proceed to fetch pretrained GPT Tokenizer files, namely the vocab and merge files."
+    "Next, we proceed to fetch pretrained GPT Tokenizer files, namely the vocab and merge files, will ideally looks like. \n",
+    "\n",
+    "We can later on use these observations to validate our custom trained GPTBPE tokenizer and the corresponding vocab.json and merges.txt file, in order to ensure the custom trained GPTBPE tokenizer will tokenze as expected."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "textile-trance",
+   "id": "different-relief",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,17 +80,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "veterinary-plenty",
+   "id": "latest-thinking",
    "metadata": {},
    "source": [
-    "Examine the vocab and merge files, noted the presence of Ġ character.\n",
-    "Ġ = space + 256 , this character is used as a control letter."
+    "Examine the vocab and merge files, observe the presence of Ġ character.\n",
+    "Ġ = space + 256, this character is used as a control letter."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blessed-carbon",
+   "id": "continental-keeping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "enhanced-stack",
+   "id": "mathematical-depression",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,10 +116,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "orange-baker",
+   "id": "deluxe-empire",
    "metadata": {},
    "source": [
-    "The following code block will load GPT2Tokenizer from HuggingFace transformer library, we verify the following :\n",
+    "The following code block will load a default GPT2Tokenizer from HuggingFace transformer library, we verify the following :\n",
     "\n",
     "            from transformers import GPT2Tokenizer\n",
     "            tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
@@ -127,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cardiac-burner",
+   "id": "detailed-thirty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alien-harris",
+   "id": "ongoing-characterization",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -159,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amazing-brick",
+   "id": "universal-penalty",
    "metadata": {},
    "source": [
     "Next code block will load tokenizer library from huggingFace, we will observe the difference when setting `use_gpt` to True or False. \n",
@@ -175,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "substantial-strike",
+   "id": "enhanced-factor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blessed-prize",
+   "id": "polar-context",
    "metadata": {},
    "source": [
     "Below is the expected outputs :\n",
@@ -233,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vocal-conflict",
+   "id": "governmental-software",
    "metadata": {},
    "source": [
     "What did we observed ? \n",
@@ -256,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "contemporary-lancaster",
+   "id": "bigger-miami",
    "metadata": {},
    "source": [
     "We will now move the gpt-vocab.json and gpt2-merges.txt to the correct data folder as a preparation for the next step."
@@ -265,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "flush-amazon",
+   "id": "killing-advance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sapphire-horse",
+   "id": "ultimate-girlfriend",
    "metadata": {},
    "source": [
     "---\n",
@@ -287,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "creative-dressing",
+   "id": "academic-taiwan",
    "metadata": {},
    "source": [
     "-----\n",
@@ -296,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "offshore-greece",
+   "id": "hungry-wilderness",
    "metadata": {},
    "source": [
     "-----\n",
